# Lang_agri_annam.ai

./: .replit  README.md  ai_analyzer.py  app.py  app_simplified.py  crop_recommender.py  data_processor.py  database.py  pyproject.toml  soil_moisture_service.py  utils.py  weather_service.py
.streamlit/: config.toml
cache/: 14.5203896_75.7223521_current.pickle  14.5203896_75.7223521_forecast.pickle  14.5203896_75.7223521_historical.pickle  26.4635198_80.246895_current.pickle  26.4635198_80.246895_forecast.pickle  26.4635198_80.246895_historical.pickle  28.7749966_77.4586967_current.pickle  28.7749966_77.4586967_forecast.pickle  28.7749966_77.4586967_historical.pickle  30.6972412_-88.1892334_current.pickle  30.6972412_-88.1892334_forecast.pickle  30.6972412_-88.1892334_historical.pickle
